rubriques de ventilation

--- a/templates/conventions_templateDV.html
+++ b/templates/conventions_templateDV.html
@@ -10,6 +10,7 @@
 			<input type="hidden" id="budgets_hclink" value="budgets_view.php?filterer_convention=<%%URLVALUE(id)%%>&<%%EMBEDDED%%>">
 			<input type="hidden" id="versements_hclink" value="versements_view.php?filterer_convention=<%%URLVALUE(id)%%>&<%%EMBEDDED%%>">
 			<input type="hidden" id="lignes_credits_hclink" value="lignes_credits_view.php?filterer_convention=<%%URLVALUE(id)%%>&<%%EMBEDDED%%>">
+			<input type="hidden" id="rubriques_hclink" value="rubriques_view.php?filterer_convention=<%%URLVALUE(id)%%>&<%%EMBEDDED%%>">
 			<input type="hidden" id="ventilation_hclink" value="ventilation_view.php?filterer_convention=<%%URLVALUE(id)%%>&<%%EMBEDDED%%>">
 			<input type="hidden" id="recrutements_hclink" value="recrutements_view.php?filterer_convention=<%%URLVALUE(id)%%>&<%%EMBEDDED%%>">
 			<input type="hidden" id="depenses_hclink" value="depenses_view.php?filterer_convention=<%%URLVALUE(id)%%>&<%%EMBEDDED%%>">
