--- a/templates/ventilation_templateTV.html
+++ b/templates/ventilation_templateTV.html
@@ -6,6 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="ventilation-convention-<%%VALUE(id)%%>" class="ventilation-convention"><%%SELECT%%><%%VALUE(convention)%%><%%ENDSELECT%%></td>
+		<td id="ventilation-rubrique-<%%VALUE(id)%%>" class="ventilation-rubrique"><%%SELECT%%><%%VALUE(rubrique)%%><%%ENDSELECT%%></td>
 		<td id="ventilation-intitule-<%%VALUE(id)%%>" class="ventilation-intitule"><%%SELECT%%><%%VALUE(intitule)%%><%%ENDSELECT%%></td>
 		<td id="ventilation-notes-<%%VALUE(id)%%>" class="ventilation-notes"><%%SELECT%%><%%VALUE(notes)%%><%%ENDSELECT%%></td>
 		<td id="ventilation-accorde-<%%VALUE(id)%%>" class="ventilation-accorde text-right"><%%SELECT%%><%%VALUE(accorde)%%><%%ENDSELECT%%></td>
