--- a/templates/ventilation_templateTVS.html
+++ b/templates/ventilation_templateTVS.html
@@ -6,6 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="ventilation-convention-<%%VALUE(id)%%>" class="ventilation-convention"><%%VALUE(convention)%%></td>
+		<td id="ventilation-rubrique-<%%VALUE(id)%%>" class="ventilation-rubrique"><%%VALUE(rubrique)%%></td>
 		<td id="ventilation-intitule-<%%VALUE(id)%%>" class="ventilation-intitule"><%%VALUE(intitule)%%></td>
 		<td id="ventilation-notes-<%%VALUE(id)%%>" class="ventilation-notes"><%%VALUE(notes)%%></td>
 		<td id="ventilation-accorde-<%%VALUE(id)%%>" class="ventilation-accorde text-right"><%%VALUE(accorde)%%></td>
