--- a/templates/budgets_templateDVP.html
+++ b/templates/budgets_templateDVP.html
@@ -87,6 +87,18 @@
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+			<label class="col-xs-3 control-label">Salaires restant &#224; verser</label>
+			<div class="col-xs-9">
+				<div class="form-control-static"><%%VALUE(reservation_salaire)%%></div>
+			</div>
+		</div>
+		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+			<label class="col-xs-3 control-label">Reste &#224; D&#233;penser</label>
+			<div class="col-xs-9">
+				<div class="form-control-static"><%%VALUE(reste_depenser)%%></div>
+			</div>
+		</div>
+		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
 			<label class="col-xs-3 control-label">U/O (%)</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(prop_uo)%%></div>
