--- a/templates/recrutements_templateTV.html
+++ b/templates/recrutements_templateTV.html
@@ -11,6 +11,7 @@
 		<td id="recrutements-date_debut-<%%VALUE(id)%%>" class="recrutements-date_debut"><%%SELECT%%><%%VALUE(date_debut)%%><%%ENDSELECT%%></td>
 		<td id="recrutements-date_fin-<%%VALUE(id)%%>" class="recrutements-date_fin"><%%SELECT%%><%%VALUE(date_fin)%%><%%ENDSELECT%%></td>
 		<td id="recrutements-duree-<%%VALUE(id)%%>" class="recrutements-duree text-right"><%%SELECT%%><%%VALUE(duree)%%><%%ENDSELECT%%></td>
+		<td id="recrutements-ligne_budgetaire-<%%VALUE(id)%%>" class="recrutements-ligne_budgetaire"><%%SELECT%%><%%VALUE(ligne_budgetaire)%%><%%ENDSELECT%%></td>
 		<td id="recrutements-ventilation-<%%VALUE(id)%%>" class="recrutements-ventilation"><%%SELECT%%><%%VALUE(ventilation)%%><%%ENDSELECT%%></td>
 		<td id="recrutements-notes-<%%VALUE(id)%%>" class="recrutements-notes"><%%SELECT%%><%%VALUE(notes)%%><%%ENDSELECT%%></td>
 		<td id="recrutements-previsionnel-<%%VALUE(id)%%>" class="recrutements-previsionnel text-right"><%%SELECT%%><%%VALUE(previsionnel)%%><%%ENDSELECT%%></td>
