--- a/templates/recrutements_templateTVS.html
+++ b/templates/recrutements_templateTVS.html
@@ -11,6 +11,7 @@
 		<td id="recrutements-date_debut-<%%VALUE(id)%%>" class="recrutements-date_debut"><%%VALUE(date_debut)%%></td>
 		<td id="recrutements-date_fin-<%%VALUE(id)%%>" class="recrutements-date_fin"><%%VALUE(date_fin)%%></td>
 		<td id="recrutements-duree-<%%VALUE(id)%%>" class="recrutements-duree text-right"><%%VALUE(duree)%%></td>
+		<td id="recrutements-ligne_budgetaire-<%%VALUE(id)%%>" class="recrutements-ligne_budgetaire"><%%VALUE(ligne_budgetaire)%%></td>
 		<td id="recrutements-ventilation-<%%VALUE(id)%%>" class="recrutements-ventilation"><%%VALUE(ventilation)%%></td>
 		<td id="recrutements-notes-<%%VALUE(id)%%>" class="recrutements-notes"><%%VALUE(notes)%%></td>
 		<td id="recrutements-previsionnel-<%%VALUE(id)%%>" class="recrutements-previsionnel text-right"><%%VALUE(previsionnel)%%></td>
