--- a/templates/budgets_templateTVS.html
+++ b/templates/budgets_templateTVS.html
@@ -17,6 +17,8 @@
 		<td id="budgets-utilise-<%%VALUE(id)%%>" class="budgets-utilise text-right"><%%VALUE(utilise)%%></td>
 		<td id="budgets-disponible-<%%VALUE(id)%%>" class="budgets-disponible text-right"><%%VALUE(disponible)%%></td>
 		<td id="budgets-reste_engager-<%%VALUE(id)%%>" class="budgets-reste_engager text-right"><%%VALUE(reste_engager)%%></td>
+		<td id="budgets-reservation_salaire-<%%VALUE(id)%%>" class="budgets-reservation_salaire text-right"><%%VALUE(reservation_salaire)%%></td>
+		<td id="budgets-reste_depenser-<%%VALUE(id)%%>" class="budgets-reste_depenser text-right"><%%VALUE(reste_depenser)%%></td>
 		<td id="budgets-prop_uo-<%%VALUE(id)%%>" class="budgets-prop_uo text-right"><%%VALUE(prop_uo)%%></td>
 		<td id="budgets-prop_uv-<%%VALUE(id)%%>" class="budgets-prop_uv text-right"><%%VALUE(prop_uv)%%></td>
 		<td id="budgets-prop_ua-<%%VALUE(id)%%>" class="budgets-prop_ua text-right"><%%VALUE(prop_ua)%%></td>
