--- a/templates/recrutements_templateDVP.html
+++ b/templates/recrutements_templateDVP.html
@@ -57,6 +57,12 @@
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+			<label class="col-xs-3 control-label">Ligne budg&#233;taire</label>
+			<div class="col-xs-9">
+				<div class="form-control-static"><span id="ligne_budgetaire<%%RND1%%>"><%%COMBOTEXT(ligne_budgetaire)%%></span></div>
+			</div>
+		</div>
+		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
 			<label class="col-xs-3 control-label">Ventilation Budg&#233;taire</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><span id="ventilation<%%RND1%%>"><%%COMBOTEXT(ventilation)%%></span></div>
