--- a/templates/conventions_templateTVS.html
+++ b/templates/conventions_templateTVS.html
@@ -9,6 +9,7 @@
 		<td id="conventions-statut-<%%VALUE(id)%%>" class="conventions-statut"><%%VALUE(statut)%%></td>
 		<td id="conventions-bailleur-<%%VALUE(id)%%>" class="conventions-bailleur"><%%VALUE(bailleur)%%></td>
 		<td id="conventions-porteur-<%%VALUE(id)%%>" class="conventions-porteur"><%%VALUE(porteur)%%></td>
+		<td id="conventions-chef_projet-<%%VALUE(id)%%>" class="conventions-chef_projet"><%%VALUE(chef_projet)%%></td>
 		<td id="conventions-date_reponse-<%%VALUE(id)%%>" class="conventions-date_reponse"><%%VALUE(date_reponse)%%></td>
 		<td id="conventions-demande-<%%VALUE(id)%%>" class="conventions-demande text-right"><%%VALUE(demande)%%></td>
 		<td id="conventions-date_debut-<%%VALUE(id)%%>" class="conventions-date_debut"><%%VALUE(date_debut)%%></td>
