--- a/templates/conventions_templateDVP.html
+++ b/templates/conventions_templateDVP.html
@@ -39,6 +39,12 @@
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+			<label class="col-xs-3 control-label">Chef de Projet</label>
+			<div class="col-xs-9">
+				<div class="form-control-static"><span id="chef_projet<%%RND1%%>"><%%COMBOTEXT(chef_projet)%%></span></div>
+			</div>
+		</div>
+		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
 			<label class="col-xs-3 control-label">Date r&#233;ponse</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%COMBOTEXT(date_reponse)%%></div>
