--- a/templates/conventions_templateTV.html
+++ b/templates/conventions_templateTV.html
@@ -9,6 +9,7 @@
 		<td id="conventions-statut-<%%VALUE(id)%%>" class="conventions-statut"><%%SELECT%%><%%VALUE(statut)%%><%%ENDSELECT%%></td>
 		<td id="conventions-bailleur-<%%VALUE(id)%%>" class="conventions-bailleur"><%%SELECT%%><%%VALUE(bailleur)%%><%%ENDSELECT%%></td>
 		<td id="conventions-porteur-<%%VALUE(id)%%>" class="conventions-porteur"><%%SELECT%%><%%VALUE(porteur)%%><%%ENDSELECT%%></td>
+		<td id="conventions-chef_projet-<%%VALUE(id)%%>" class="conventions-chef_projet"><%%SELECT%%><%%VALUE(chef_projet)%%><%%ENDSELECT%%></td>
 		<td id="conventions-date_reponse-<%%VALUE(id)%%>" class="conventions-date_reponse"><%%SELECT%%><%%VALUE(date_reponse)%%><%%ENDSELECT%%></td>
 		<td id="conventions-demande-<%%VALUE(id)%%>" class="conventions-demande text-right"><%%VALUE(demande)%%></td>
 		<td id="conventions-date_debut-<%%VALUE(id)%%>" class="conventions-date_debut"><%%SELECT%%><%%VALUE(date_debut)%%><%%ENDSELECT%%></td>
