--- a/templates/depenses_templateDV.html
+++ b/templates/depenses_templateDV.html
@@ -59,6 +59,16 @@
 
 				<div class="form-group">
 					<hr class="hidden-md hidden-lg">
+					<label for="reference" class="control-label col-lg-3">R&#233;ference <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#reference-description"></i></label>
+					<div class="col-lg-9">
+						<span class="help-block collapse" id="reference-description"><div class="alert alert-info">Num&#233;ro de d&#233;placement ou num&#233;ro de commande</div></span>
+
+						<input maxlength="40" type="text" class="form-control" name="reference" id="reference" value="<%%VALUE(reference)%%>">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<hr class="hidden-md hidden-lg">
 					<label for="contrat" class="control-label col-lg-3" data-parent_link="view_parent_modal">Contrat (si salaire) <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#contrat-description"></i></label>
 					<div class="col-lg-9">
 						<span class="help-block collapse" id="contrat-description"><div class="alert alert-info">Pour les d&#233;penses de personnel, voir la liste des recrutements</div></span>
