--- a/templates/depenses_templateDVP.html
+++ b/templates/depenses_templateDVP.html
@@ -45,6 +45,12 @@
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+			<label class="col-xs-3 control-label">R&#233;ference</label>
+			<div class="col-xs-9">
+				<div class="form-control-static"><%%VALUE(reference)%%></div>
+			</div>
+		</div>
+		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
 			<label class="col-xs-3 control-label">Contrat (si salaire)</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><span id="contrat<%%RND1%%>"><%%COMBOTEXT(contrat)%%></span></div>
