ajout d'un système de vérification des dépenses

--- a/templates/depenses_templateDV.html
+++ b/templates/depenses_templateDV.html
@@ -119,6 +119,14 @@
 					</div>
 				</div>
 
+				<div class="form-group">
+					<hr class="hidden-md hidden-lg">
+					<div class="col-lg-offset-3 col-lg-9">
+						<div class="checkbox"><label for="verifie"><input type="checkbox" name="verifie" id="verifie" value="1" <%%CHECKED(verifie)%%>> V&#233;rifi&#233;e ?</label>
+						</div>
+					</div>
+				</div>
+
 			</fieldset>
 		</div>
 
