--- a/templates/depenses_templateTV.html
+++ b/templates/depenses_templateTV.html
@@ -17,3 +17,4 @@
 		<td id="depenses-statut-<%%VALUE(id)%%>" class="depenses-statut"><%%SELECT%%><%%VALUE(statut)%%><%%ENDSELECT%%></td>
 		<td id="depenses-ventilation-<%%VALUE(id)%%>" class="depenses-ventilation"><%%SELECT%%><%%VALUE(ventilation)%%><%%ENDSELECT%%></td>
 		<td id="depenses-notes-<%%VALUE(id)%%>" class="depenses-notes"><%%SELECT%%><%%VALUE(notes)%%><%%ENDSELECT%%></td>
+		<td id="depenses-verifie-<%%VALUE(id)%%>" class="depenses-verifie"><%%SELECT%%><%%VALUE(verifie)%%><%%ENDSELECT%%></td>
