--- a/templates/depenses_templateDVP.html
+++ b/templates/depenses_templateDVP.html
@@ -86,5 +86,11 @@
 				<div class="form-control-static"><%%VALUE(notes)%%></div>
 			</div>
 		</div>
+		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+			<label class="col-xs-3 control-label">V&#233;rifi&#233;e ?</label>
+			<div class="col-xs-9">
+				<div class="form-control-static"><input type="checkbox" name="verifie" id="verifie" value="1" <%%CHECKED(verifie)%%> readonly></div>
+			</div>
+		</div>
 	</fieldset>
 </div>
