--- a/templates/depenses_templateTVS.html
+++ b/templates/depenses_templateTVS.html
@@ -17,3 +17,4 @@
 		<td id="depenses-statut-<%%VALUE(id)%%>" class="depenses-statut"><%%VALUE(statut)%%></td>
 		<td id="depenses-ventilation-<%%VALUE(id)%%>" class="depenses-ventilation"><%%VALUE(ventilation)%%></td>
 		<td id="depenses-notes-<%%VALUE(id)%%>" class="depenses-notes"><%%VALUE(notes)%%></td>
+		<td id="depenses-verifie-<%%VALUE(id)%%>" class="depenses-verifie"><%%VALUE(verifie)%%></td>
