--- a/templates/conventions_templateTV.html
+++ b/templates/conventions_templateTV.html
@@ -23,7 +23,7 @@
 		<td id="conventions-verse_hfg-<%%VALUE(id)%%>" class="conventions-verse_hfg text-right"><%%VALUE(verse_hfg)%%></td>
 		<td id="conventions-ouvert-<%%VALUE(id)%%>" class="conventions-ouvert text-right"><%%VALUE(ouvert)%%></td>
 		<td id="conventions-reste_ouvrir-<%%VALUE(id)%%>" class="conventions-reste_ouvrir text-right"><%%VALUE(reste_ouvrir)%%></td>
-		<td id="conventions-reserve-<%%VALUE(id)%%>" class="conventions-reserve text-right"><%%VALUE(reserve)%%></td>
+		<td id="conventions-non_liquide-<%%VALUE(id)%%>" class="conventions-non_liquide text-right"><%%VALUE(non_liquide)%%></td>
 		<td id="conventions-liquide-<%%VALUE(id)%%>" class="conventions-liquide text-right"><%%SELECT%%><%%VALUE(liquide)%%><%%ENDSELECT%%></td>
 		<td id="conventions-utilise-<%%VALUE(id)%%>" class="conventions-utilise text-right"><%%VALUE(utilise)%%></td>
 		<td id="conventions-disponible-<%%VALUE(id)%%>" class="conventions-disponible text-right"><%%VALUE(disponible)%%></td>
