--- a/templates/depenses_templateTV.html
+++ b/templates/depenses_templateTV.html
@@ -14,7 +14,7 @@
 		<td id="depenses-contrat-<%%VALUE(id)%%>" class="depenses-contrat"><%%SELECT%%><%%VALUE(contrat)%%><%%ENDSELECT%%></td>
 		<td id="depenses-beneficiaire-<%%VALUE(id)%%>" class="depenses-beneficiaire"><%%SELECT%%><%%VALUE(beneficiaire)%%><%%ENDSELECT%%></td>
 		<td id="depenses-montant-<%%VALUE(id)%%>" class="depenses-montant text-right"><%%SELECT%%><%%VALUE(montant)%%><%%ENDSELECT%%></td>
-		<td id="depenses-statut-<%%VALUE(id)%%>" class="depenses-statut"><%%SELECT%%><%%VALUE(statut)%%><%%ENDSELECT%%></td>
+		<td id="depenses-liquidee-<%%VALUE(id)%%>" class="depenses-liquidee text-right"><%%SELECT%%><%%VALUE(liquidee)%%><%%ENDSELECT%%></td>
 		<td id="depenses-ventilation-<%%VALUE(id)%%>" class="depenses-ventilation"><%%SELECT%%><%%VALUE(ventilation)%%><%%ENDSELECT%%></td>
 		<td id="depenses-notes-<%%VALUE(id)%%>" class="depenses-notes"><%%SELECT%%><%%VALUE(notes)%%><%%ENDSELECT%%></td>
-		<td id="depenses-verifie-<%%VALUE(id)%%>" class="depenses-verifie"><%%SELECT%%><%%VALUE(verifie)%%><%%ENDSELECT%%></td>
+		<td id="depenses-verifie-<%%VALUE(id)%%>" class="depenses-verifie text-right"><%%SELECT%%><%%VALUE(verifie)%%><%%ENDSELECT%%></td>
