--- a/templates/depenses_templateTVS.html
+++ b/templates/depenses_templateTVS.html
@@ -14,7 +14,7 @@
 		<td id="depenses-contrat-<%%VALUE(id)%%>" class="depenses-contrat"><%%VALUE(contrat)%%></td>
 		<td id="depenses-beneficiaire-<%%VALUE(id)%%>" class="depenses-beneficiaire"><%%VALUE(beneficiaire)%%></td>
 		<td id="depenses-montant-<%%VALUE(id)%%>" class="depenses-montant text-right"><%%VALUE(montant)%%></td>
-		<td id="depenses-statut-<%%VALUE(id)%%>" class="depenses-statut"><%%VALUE(statut)%%></td>
+		<td id="depenses-liquidee-<%%VALUE(id)%%>" class="depenses-liquidee text-right"><%%VALUE(liquidee)%%></td>
 		<td id="depenses-ventilation-<%%VALUE(id)%%>" class="depenses-ventilation"><%%VALUE(ventilation)%%></td>
 		<td id="depenses-notes-<%%VALUE(id)%%>" class="depenses-notes"><%%VALUE(notes)%%></td>
-		<td id="depenses-verifie-<%%VALUE(id)%%>" class="depenses-verifie"><%%VALUE(verifie)%%></td>
+		<td id="depenses-verifie-<%%VALUE(id)%%>" class="depenses-verifie text-right"><%%VALUE(verifie)%%></td>
