--- a/templates/lignes_credits_templateTV.html
+++ b/templates/lignes_credits_templateTV.html
@@ -11,7 +11,7 @@
 		<td id="lignes_credits-exercice-<%%VALUE(id)%%>" class="lignes_credits-exercice"><%%SELECT%%><%%VALUE(exercice)%%><%%ENDSELECT%%></td>
 		<td id="lignes_credits-notes-<%%VALUE(id)%%>" class="lignes_credits-notes"><%%SELECT%%><%%VALUE(notes)%%><%%ENDSELECT%%></td>
 		<td id="lignes_credits-ouvert-<%%VALUE(id)%%>" class="lignes_credits-ouvert text-right"><%%VALUE(ouvert)%%></td>
-		<td id="lignes_credits-reserve-<%%VALUE(id)%%>" class="lignes_credits-reserve text-right"><%%VALUE(reserve)%%></td>
+		<td id="lignes_credits-non_liquide-<%%VALUE(id)%%>" class="lignes_credits-non_liquide text-right"><%%VALUE(non_liquide)%%></td>
 		<td id="lignes_credits-liquide-<%%VALUE(id)%%>" class="lignes_credits-liquide text-right"><%%VALUE(liquide)%%></td>
 		<td id="lignes_credits-utilise-<%%VALUE(id)%%>" class="lignes_credits-utilise text-right"><%%VALUE(utilise)%%></td>
 		<td id="lignes_credits-disponible-<%%VALUE(id)%%>" class="lignes_credits-disponible text-right"><%%VALUE(disponible)%%></td>
