--- a/templates/recrutements_templateDV.html
+++ b/templates/recrutements_templateDV.html
@@ -110,7 +110,7 @@
 					<hr class="hidden-md hidden-lg">
 					<label for="depense" class="control-label col-lg-3">D&#233;pens&#233; <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#depense-description"></i></label>
 					<div class="col-lg-9">
-						<span class="help-block collapse" id="depense-description"><div class="alert alert-info">D&#233;penses (tous status) associ&#233;es &#224; ce contrat</div></span>
+						<span class="help-block collapse" id="depense-description"><div class="alert alert-info">D&#233;penses (liquid&#233;es ou non) associ&#233;es &#224; ce contrat</div></span>
 
 						<input maxlength="13" type="text" class="form-control" name="depense" id="depense" value="<%%VALUE(depense)%%>">
 					</div>
