--- a/templates/ventilation_templateDV.html
+++ b/templates/ventilation_templateDV.html
@@ -65,9 +65,9 @@
 
 				<div class="form-group">
 					<hr class="hidden-md hidden-lg">
-					<label for="reserve" class="control-label col-lg-3">R&#233;serv&#233;</label>
+					<label for="non_liquide" class="control-label col-lg-3">Non Liquid&#233;</label>
 					<div class="col-lg-9">
-						<input maxlength="13" type="text" class="form-control" name="reserve" id="reserve" value="<%%VALUE(reserve)%%>">
+						<input maxlength="13" type="text" class="form-control" name="non_liquide" id="non_liquide" value="<%%VALUE(non_liquide)%%>">
 					</div>
 				</div>
 
