--- a/templates/budgets_templateTVS.html
+++ b/templates/budgets_templateTVS.html
@@ -12,7 +12,7 @@
 		<td id="budgets-reste_verser-<%%VALUE(id)%%>" class="budgets-reste_verser text-right"><%%VALUE(reste_verser)%%></td>
 		<td id="budgets-ouvert-<%%VALUE(id)%%>" class="budgets-ouvert text-right"><%%VALUE(ouvert)%%></td>
 		<td id="budgets-reste_ouvrir-<%%VALUE(id)%%>" class="budgets-reste_ouvrir text-right"><%%VALUE(reste_ouvrir)%%></td>
-		<td id="budgets-reserve-<%%VALUE(id)%%>" class="budgets-reserve text-right"><%%VALUE(reserve)%%></td>
+		<td id="budgets-non_liquide-<%%VALUE(id)%%>" class="budgets-non_liquide text-right"><%%VALUE(non_liquide)%%></td>
 		<td id="budgets-liquide-<%%VALUE(id)%%>" class="budgets-liquide text-right"><%%VALUE(liquide)%%></td>
 		<td id="budgets-utilise-<%%VALUE(id)%%>" class="budgets-utilise text-right"><%%VALUE(utilise)%%></td>
 		<td id="budgets-disponible-<%%VALUE(id)%%>" class="budgets-disponible text-right"><%%VALUE(disponible)%%></td>
