--- a/templates/conventions_templateDV.html
+++ b/templates/conventions_templateDV.html
@@ -201,11 +201,11 @@
 
 				<div class="form-group">
 					<hr class="hidden-md hidden-lg">
-					<label for="reserve" class="control-label col-lg-3">R&#233;serv&#233; <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#reserve-description"></i></label>
+					<label for="non_liquide" class="control-label col-lg-3">Non Liquid&#233; <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#non_liquide-description"></i></label>
 					<div class="col-lg-9">
-						<span class="help-block collapse" id="reserve-description"><div class="alert alert-info">Sommes des d&#233;penses r&#233;serv&#233;es (mouvements de type 'd&#233;pense' et de statut 'r&#233;serv&#233;e')</div></span>
+						<span class="help-block collapse" id="non_liquide-description"><div class="alert alert-info">Sommes des d&#233;penses non liquid&#233;es</div></span>
 
-						<input maxlength="13" type="text" class="form-control" name="reserve" id="reserve" value="<%%VALUE(reserve)%%>">
+						<input maxlength="13" type="text" class="form-control" name="non_liquide" id="non_liquide" value="<%%VALUE(non_liquide)%%>">
 					</div>
 				</div>
 
@@ -213,7 +213,7 @@
 					<hr class="hidden-md hidden-lg">
 					<label for="liquide" class="control-label col-lg-3">Liquid&#233; <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#liquide-description"></i></label>
 					<div class="col-lg-9">
-						<span class="help-block collapse" id="liquide-description"><div class="alert alert-info">Sommes des d&#233;penses liquid&#233;es (mouvements de type 'd&#233;pense' et de statut 'liquid&#233;e')</div></span>
+						<span class="help-block collapse" id="liquide-description"><div class="alert alert-info">Sommes des d&#233;penses liquid&#233;es</div></span>
 
 						<input maxlength="13" type="text" class="form-control" name="liquide" id="liquide" value="<%%VALUE(liquide)%%>">
 					</div>
@@ -221,9 +221,9 @@
 
 				<div class="form-group">
 					<hr class="hidden-md hidden-lg">
-					<label for="utilise" class="control-label col-lg-3">Utilis&#233; (R+L) <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#utilise-description"></i></label>
+					<label for="utilise" class="control-label col-lg-3">Utilis&#233; (L+NL) <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#utilise-description"></i></label>
 					<div class="col-lg-9">
-						<span class="help-block collapse" id="utilise-description"><div class="alert alert-info">Total des d&#233;penses (r&#233;serv&#233;es et liquid&#233;es)</div></span>
+						<span class="help-block collapse" id="utilise-description"><div class="alert alert-info">Total des d&#233;penses (liquid&#233;es et non liquid&#233;es)</div></span>
 
 						<input maxlength="13" type="text" class="form-control" name="utilise" id="utilise" value="<%%VALUE(utilise)%%>">
 					</div>
