--- a/templates/depenses_templateDVP.html
+++ b/templates/depenses_templateDVP.html
@@ -69,9 +69,9 @@
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
-			<label class="col-xs-3 control-label">Statut</label>
+			<label class="col-xs-3 control-label">Liquid&#233;e ?</label>
 			<div class="col-xs-9">
-				<div class="form-control-static"><%%COMBOTEXT(statut)%%></div>
+				<div class="form-control-static"><input type="checkbox" name="liquidee" id="liquidee" value="1" <%%CHECKED(liquidee)%%> readonly></div>
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
