--- a/templates/rubriques_templateTV.html
+++ b/templates/rubriques_templateTV.html
@@ -9,7 +9,7 @@
 		<td id="rubriques-intitule-<%%VALUE(id)%%>" class="rubriques-intitule"><%%SELECT%%><%%VALUE(intitule)%%><%%ENDSELECT%%></td>
 		<td id="rubriques-notes-<%%VALUE(id)%%>" class="rubriques-notes"><%%SELECT%%><%%VALUE(notes)%%><%%ENDSELECT%%></td>
 		<td id="rubriques-accorde-<%%VALUE(id)%%>" class="rubriques-accorde text-right"><%%SELECT%%><%%VALUE(accorde)%%><%%ENDSELECT%%></td>
-		<td id="rubriques-reserve-<%%VALUE(id)%%>" class="rubriques-reserve text-right"><%%VALUE(reserve)%%></td>
+		<td id="rubriques-non_liquide-<%%VALUE(id)%%>" class="rubriques-non_liquide text-right"><%%VALUE(non_liquide)%%></td>
 		<td id="rubriques-liquide-<%%VALUE(id)%%>" class="rubriques-liquide text-right"><%%VALUE(liquide)%%></td>
 		<td id="rubriques-utilise-<%%VALUE(id)%%>" class="rubriques-utilise text-right"><%%VALUE(utilise)%%></td>
 		<td id="rubriques-reste_engager-<%%VALUE(id)%%>" class="rubriques-reste_engager text-right"><%%VALUE(reste_engager)%%></td>
