--- a/templates/ventilation_templateDVP.html
+++ b/templates/ventilation_templateDVP.html
@@ -45,9 +45,9 @@
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
-			<label class="col-xs-3 control-label">R&#233;serv&#233;</label>
+			<label class="col-xs-3 control-label">Non Liquid&#233;</label>
 			<div class="col-xs-9">
-				<div class="form-control-static"><%%VALUE(reserve)%%></div>
+				<div class="form-control-static"><%%VALUE(non_liquide)%%></div>
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
