--- a/templates/ventilation_templateTVS.html
+++ b/templates/ventilation_templateTVS.html
@@ -10,7 +10,7 @@
 		<td id="ventilation-intitule-<%%VALUE(id)%%>" class="ventilation-intitule"><%%VALUE(intitule)%%></td>
 		<td id="ventilation-notes-<%%VALUE(id)%%>" class="ventilation-notes"><%%VALUE(notes)%%></td>
 		<td id="ventilation-accorde-<%%VALUE(id)%%>" class="ventilation-accorde text-right"><%%VALUE(accorde)%%></td>
-		<td id="ventilation-reserve-<%%VALUE(id)%%>" class="ventilation-reserve text-right"><%%VALUE(reserve)%%></td>
+		<td id="ventilation-non_liquide-<%%VALUE(id)%%>" class="ventilation-non_liquide text-right"><%%VALUE(non_liquide)%%></td>
 		<td id="ventilation-liquide-<%%VALUE(id)%%>" class="ventilation-liquide text-right"><%%VALUE(liquide)%%></td>
 		<td id="ventilation-utilise-<%%VALUE(id)%%>" class="ventilation-utilise text-right"><%%VALUE(utilise)%%></td>
 		<td id="ventilation-reste_engager-<%%VALUE(id)%%>" class="ventilation-reste_engager text-right"><%%VALUE(reste_engager)%%></td>
