--- a/templates/budgets_templateTVS.html
+++ b/templates/budgets_templateTVS.html
@@ -7,7 +7,9 @@
 
 		<td id="budgets-convention-<%%VALUE(id)%%>" class="budgets-convention"><%%VALUE(convention)%%></td>
 		<td id="budgets-type-<%%VALUE(id)%%>" class="budgets-type"><%%VALUE(type)%%></td>
+		<td id="budgets-precision-<%%VALUE(id)%%>" class="budgets-precision"><%%VALUE(precision)%%></td>
 		<td id="budgets-accorde-<%%VALUE(id)%%>" class="budgets-accorde text-right"><%%VALUE(accorde)%%></td>
+		<td id="budgets-notes-<%%VALUE(id)%%>" class="budgets-notes"><%%VALUE(notes)%%></td>
 		<td id="budgets-verse-<%%VALUE(id)%%>" class="budgets-verse text-right"><%%VALUE(verse)%%></td>
 		<td id="budgets-reste_verser-<%%VALUE(id)%%>" class="budgets-reste_verser text-right"><%%VALUE(reste_verser)%%></td>
 		<td id="budgets-ouvert-<%%VALUE(id)%%>" class="budgets-ouvert text-right"><%%VALUE(ouvert)%%></td>
