--- a/templates/budgets_templateDVP.html
+++ b/templates/budgets_templateDVP.html
@@ -27,9 +27,21 @@
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+			<label class="col-xs-3 control-label">Pr&#233;cision</label>
+			<div class="col-xs-9">
+				<div class="form-control-static"><%%VALUE(precision)%%></div>
+			</div>
+		</div>
+		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
 			<label class="col-xs-3 control-label">Accord&#233;</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(accorde)%%></div>
+			</div>
+		</div>
+		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+			<label class="col-xs-3 control-label">Notes</label>
+			<div class="col-xs-9">
+				<div class="form-control-static"><%%VALUE(notes)%%></div>
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
