--- a/templates/depenses_templateDV.html
+++ b/templates/depenses_templateDV.html
@@ -43,7 +43,7 @@
 
 				<div class="form-group">
 					<hr class="hidden-md hidden-lg">
-					<label for="date" class="control-label col-lg-3">Date<span class="text-danger"><%%TRANSLATION(*)%%></span></label>
+					<label for="date" class="control-label col-lg-3">Date</label>
 					<div class="col-lg-9">
 						<%%COMBO(date)%%>
 					</div>
