--- a/templates/personnes_templateDV.html
+++ b/templates/personnes_templateDV.html
@@ -22,7 +22,7 @@
 
 				<div class="form-group">
 					<hr class="hidden-md hidden-lg">
-					<label for="nom" class="control-label col-lg-3">Nom Pr&#233;nom<span class="text-danger"><%%TRANSLATION(*)%%></span></label>
+					<label for="nom" class="control-label col-lg-3">Pr&#233;nom Nom<span class="text-danger"><%%TRANSLATION(*)%%></span></label>
 					<div class="col-lg-9">
 						<input maxlength="100" type="text" class="form-control" name="nom" id="nom" value="<%%VALUE(nom)%%>" required>
 					</div>
