--- a/templates/personnes_templateDVP.html
+++ b/templates/personnes_templateDVP.html
@@ -15,7 +15,7 @@
 <div class="panel-body">
 	<fieldset class="form-horizontal">
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
-			<label class="col-xs-3 control-label">Nom Pr&#233;nom</label>
+			<label class="col-xs-3 control-label">Pr&#233;nom Nom</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(nom)%%></div>
 			</div>
