--- a/templates/recrutements_templateDV.html
+++ b/templates/recrutements_templateDV.html
@@ -84,7 +84,7 @@
 
 				<div class="form-group">
 					<hr class="hidden-md hidden-lg">
-					<label for="ventilation" class="control-label col-lg-3" data-parent_link="view_parent_modal">Ventilation Analytique</label>
+					<label for="ventilation" class="control-label col-lg-3" data-parent_link="view_parent_modal">Ventilation Budg&#233;taire</label>
 					<div class="col-lg-9">
 						<div class="form-control-static" style="white-space: nowrap; overflow-x: hidden;"><%%COMBO(ventilation)%%><%%PLINK(ventilation)%%><%%ADDNEW(ventilation)%%></div>
 					</div>
